--- a/app/locale/en_US/Mage_ImportExport.csv
+++ b/app/locale/en_US/Mage_ImportExport.csv
@@ -21,6 +21,8 @@
 "Column names: ""%s"" are invalid","Column names: ""%s"" are invalid"
 "Customers","Customers"
 "Data is invalid or file is not uploaded","Data is invalid or file is not uploaded"
+"Datetime value expected.","Datetime value expected."
+"Decimal value expected.","Decimal value expected."
 "Delete Entities","Delete Entities"
 "Destination directory is not writable","Destination directory is not writable"
 "Destination file is not writable","Destination file is not writable"
@@ -59,6 +61,7 @@
 "Import successfully done.","Import successfully done."
 "Import/Export","Import/Export"
 "Input entity code is not equal to entity adapter code","Input entity code is not equal to entity adapter code"
+"Integer value expected.","Integer value expected."
 "Invalid entity","Invalid entity"
 "Invalid entity model","Invalid entity model"
 "Invalid file format","Invalid file format"
@@ -74,6 +77,7 @@
 "Not implemented yet","Not implemented yet"
 "Please fix errors and re-upload file","Please fix errors and re-upload file"
 "Please fix errors and re-upload file or simply press ""Import"" button to skip rows with errors","Please fix errors and re-upload file or simply press ""Import"" button to skip rows with errors"
+"Possible options are: %s","Possible options are: %s"
 "Products","Products"
 "Replace Existing Complex Data","Replace Existing Complex Data"
 "Select File to Import","Select File to Import"
@@ -82,6 +86,7 @@
 "Source file path must be a string","Source file path must be a string"
 "Source is not set","Source is not set"
 "Status","Status"
+"String is too long, only %s characters allowed.","String is too long, only %s characters allowed."
 "There are no product types available for export","There are no product types available for export"
 "There is no data for export","There is no data for export"
 "To","To"
